--- a/src/Stravaig.Extensions.Core/Stravaig.Extensions.Core.csproj
+++ b/src/Stravaig.Extensions.Core/Stravaig.Extensions.Core.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <LangVersion>10</LangVersion>
+        <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
 </Project>
