--- a/src/Stravaig.Extensions.Core/Stravaig.Extensions.Core.csproj
+++ b/src/Stravaig.Extensions.Core/Stravaig.Extensions.Core.csproj
@@ -6,4 +6,33 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <YEAR>$([System.DateTime]::Now.Year)</YEAR>
+        <Title>Stravaig Core Extensions</Title>
+        <Authors>Colin Angus Mackay</Authors>
+        <Description>A core set of extensions to make developing a little easier.</Description>
+        <Copyright>©$(YEAR) Colin Angus Mackay. See licence for more information.</Copyright>
+        <PackageProjectUrl>https://github.com/Stravaig-Projects/Stravaig.Extensions.Core/blob/main/README.md</PackageProjectUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/Stravaig-Projects/Stravaig.Extensions.Core</RepositoryUrl>
+        <PackageIcon>stravaig-icon.png</PackageIcon>
+        <PackageTags>extensions</PackageTags>
+    </PropertyGroup>
+    <ItemGroup>
+        <None Include="stravaig-icon.png" Pack="true" PackagePath="/" />
+    </ItemGroup>
+
+    <!-- Source link properties -->
+    <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+    </ItemGroup>
+    
 </Project>
