--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,11 @@ jobs:
           dotnet-version: 3.1.x
 
       - uses: actions/setup-dotnet@v1
+        name: Setup .NET 5.0 (STS)
+        with:
+          dotnet-version: 5.0.x
+          
+      - uses: actions/setup-dotnet@v1
         name: Setup .NET 6.0 (LTS)
         with:
           dotnet-version: 6.0.x
