--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -166,14 +166,20 @@ jobs:
         shell: pwsh
         run: ./Reset-WipReleaseNotes.ps1
         
+      - name: Update Docs
+        #IF Publishing & Stable release
+        if: ${{ env.STRAVAIG_PUBLISH_TO_NUGET == 'true' && env.STRAVAIG_IS_STABLE == 'true' }}
+        shell: pwsh
+        run: ./Update-Docs.ps1
+
       - name: Commit post release updates
         #IF Publishing & Stable release
         if: ${{ env.STRAVAIG_PUBLISH_TO_NUGET == 'true' && env.STRAVAIG_IS_STABLE == 'true' }}
         uses: EndBug/add-and-commit@v5
         with:
-          add: ./contributors.md ./release-notes/** ./version.txt
+          add: ./contributors.md ./release-notes/** ./version.txt ./docs/**
           author_name: StravaigBot
           author_email: github-bot@stravaig.scot
-          message: "[bot] Post v${{ env.STRAVAIG_PACKAGE_FULL_VERSION }} Release & Bump Version updates."
+          message: "[bot] Update metadata post v${{ env.STRAVAIG_PACKAGE_FULL_VERSION }} release."
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
