--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,7 @@
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+  - jekyll-remote-theme 
+
+title: Stravaig.Extensions.Core
+description: A set of small extensions to make life a little easier.
+show_downloads: false
