--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -4,7 +4,7 @@ name: Deploy Docs to GitHubPages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["#50/doc-theme"]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
