--- a/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer.CodeFixes/Stravaig.Extensions.Core.Analyzer.CodeFixes.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer.CodeFixes/Stravaig.Extensions.Core.Analyzer.CodeFixes.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>11</LangVersion>
     <IsPackable>false</IsPackable>
     <RootNamespace>Stravaig.Extensions.Core.Analyzer</RootNamespace>
   </PropertyGroup>
@@ -11,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Stravaig.Extensions.Core\Stravaig.Extensions.Core.csproj" />
     <ProjectReference Include="..\Stravaig.Extensions.Core.Analyzer\Stravaig.Extensions.Core.Analyzer.csproj" />
   </ItemGroup>
 
