(#49) Move Analyser projects to same folder as the solution

--- a/src/Stravaig.Extensions.Core.Analyzer.CodeFixes/Stravaig.Extensions.Core.Analyzer.CodeFixes.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer.CodeFixes/Stravaig.Extensions.Core.Analyzer.CodeFixes.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Stravaig.Extensions.Core\Stravaig.Extensions.Core.csproj" />
+    <ProjectReference Include="..\Stravaig.Extensions.Core\Stravaig.Extensions.Core.csproj" />
     <ProjectReference Include="..\Stravaig.Extensions.Core.Analyzer\Stravaig.Extensions.Core.Analyzer.csproj" />
   </ItemGroup>
 
