--- a/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer.csproj
@@ -22,4 +22,9 @@
     <EmbeddedResource Update="Resources.resx" Generator="ResXFileCodeGenerator" LastGenOutput="Resources.Designer.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <AdditionalFiles Include="AnalyzerReleases.Shipped.md" />
+    <AdditionalFiles Include="AnalyzerReleases.Unshipped.md" />
+  </ItemGroup>
+
 </Project>
