--- a/src/Stravaig.Extensions.Core.Analyzer.CodeFixes/Stravaig.Extensions.Core.Analyzer.CodeFixes.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer.CodeFixes/Stravaig.Extensions.Core.Analyzer.CodeFixes.csproj
@@ -5,6 +5,7 @@
     <LangVersion>11</LangVersion>
     <IsPackable>false</IsPackable>
     <RootNamespace>Stravaig.Extensions.Core.Analyzer</RootNamespace>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <ItemGroup>
