--- a/src/Stravaig.Extensions.Core.Analyzer.Tests/Stravaig.Extensions.Core.Analyzer.Tests.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer.Tests/Stravaig.Extensions.Core.Analyzer.Tests.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeFix.Testing.NUnit" Version="1.1.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic.CodeRefactoring.Testing.NUnit" Version="1.1.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.2" />
   </ItemGroup>
 
   <ItemGroup>
