--- a/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer/Stravaig.Extensions.Core.Analyzer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>11</LangVersion>
     <IsPackable>false</IsPackable>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
 
     <!-- Avoid ID conflicts with the package project. -->
     <PackageId>*$(MSBuildProjectFile)*</PackageId>
