--- a/src/Stravaig.Extensions.Core.Analyzer.Package/Stravaig.Extensions.Core.Analyzer.Package.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer.Package/Stravaig.Extensions.Core.Analyzer.Package.csproj
@@ -8,19 +8,20 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <YEAR>$([System.DateTime]::Now.Year)</YEAR>
+    <Title>Stravaig Core Extension Analyzers</Title>
+    <Copyright>©$(YEAR) Colin Angus Mackay. See licence for more information.</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageId>Stravaig.Extensions.Core.Analyzer</PackageId>
-    <PackageVersion>1.0.0.0</PackageVersion>
-    <Authors>colin.mackay</Authors>
-    <PackageLicenseUrl>http://LICENSE_URL_HERE_OR_DELETE_THIS_LINE</PackageLicenseUrl>
-    <PackageProjectUrl>http://PROJECT_URL_HERE_OR_DELETE_THIS_LINE</PackageProjectUrl>
-    <PackageIconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</PackageIconUrl>
-    <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl>
+    <Authors>Colin Angus Mackay</Authors>
+    <PackageLicenseUrl>https://github.com/Stravaig-Projects/Stravaig.Extensions.Core/blob/main/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Stravaig-Projects/Stravaig.Extensions.Core/blob/main/README.md</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Stravaig-Projects/Stravaig.Extensions.Core</RepositoryUrl>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Description>Stravaig.Extensions.Core.Analyzer</Description>
-    <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
-    <Copyright>Copyright</Copyright>
-    <PackageTags>Stravaig.Extensions.Core.Analyzer, analyzers</PackageTags>
+    <Description>Analyzers for the Stravaig.Extensions.Core package</Description>
+    <PackageTags>Stravaig.Extensions.Core, analyzers, code-fixes</PackageTags>
     <DevelopmentDependency>true</DevelopmentDependency>
+    <PackageIcon>stravaig-icon.png</PackageIcon>
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
     <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);_AddAnalyzersToOutput</TargetsForTfmSpecificContentInPackage>
@@ -33,6 +34,10 @@
 
   <ItemGroup>
     <None Update="tools\*.ps1" CopyToOutputDirectory="PreserveNewest" Pack="true" PackagePath="" />
+    <None Update="stravaig-icon.png">
+      <Pack>true</Pack>
+      <PackagePath>/</PackagePath>
+    </None>
   </ItemGroup>
 
   <Target Name="_AddAnalyzersToOutput">
@@ -41,5 +46,9 @@
       <TfmSpecificPackageFile Include="$(OutputPath)\Stravaig.Extensions.Core.Analyzer.CodeFixes.dll" PackagePath="analyzers/dotnet/cs" />
     </ItemGroup>
   </Target>
+
+  <ItemGroup>
+    <None Include="stravaig-icon.png" Pack="true" PackagePath="/" />
+  </ItemGroup>
 
 </Project>
