--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,17 +88,17 @@ jobs:
         if: ${{ env.STRAVAIG_IS_PREVIEW == 'true' }}
         run: dotnet pack ./src/$STRAVAIG_PROJECT/$STRAVAIG_PROJECT.csproj --configuration Release --output ./out --include-symbols --include-source /p:VersionPrefix="$STRAVAIG_PACKAGE_VERSION" --version-suffix "$STRAVAIG_PACKAGE_VERSION_SUFFIX" -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
        
-      - name: Package Analyser Preview Release
-        if: ${{ env.STRAVAIG_IS_PREVIEW == 'true' }}
-        run: dotnet pack ./src/$STRAVAIG_PROJECT.Analyzer.Package/$STRAVAIG_PROJECT.Analyzer.Package.csproj --configuration Release --output ./out --include-symbols --include-source /p:VersionPrefix="$STRAVAIG_PACKAGE_VERSION" --version-suffix "$STRAVAIG_PACKAGE_VERSION_SUFFIX" -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
-
+#      - name: Package Analyser Preview Release
+#        if: ${{ env.STRAVAIG_IS_PREVIEW == 'true' }}
+#        run: dotnet pack ./src/$STRAVAIG_PROJECT.Analyzer.Package/$STRAVAIG_PROJECT.Analyzer.Package.csproj --configuration Release --output ./out --include-symbols --include-source /p:VersionPrefix="$STRAVAIG_PACKAGE_VERSION" --version-suffix "$STRAVAIG_PACKAGE_VERSION_SUFFIX" -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
+#
       - name: Package Stable Release
         if: ${{ env.STRAVAIG_IS_STABLE == 'true' }}
         run: dotnet pack ./src/$STRAVAIG_PROJECT/$STRAVAIG_PROJECT.csproj --configuration Release --output ./out --include-symbols --include-source /p:VersionPrefix="$STRAVAIG_PACKAGE_VERSION" -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
 
-      - name: Package Analyser Stable Release
-        if: ${{ env.STRAVAIG_IS_STABLE == 'true' }}
-        run: dotnet pack ./src/$STRAVAIG_PROJECT.Analyzer.Package/$STRAVAIG_PROJECT.Analyzer.Package.csproj --configuration Release --output ./out --include-symbols --include-source /p:VersionPrefix="$STRAVAIG_PACKAGE_VERSION" -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
+#      - name: Package Analyser Stable Release
+#        if: ${{ env.STRAVAIG_IS_STABLE == 'true' }}
+#        run: dotnet pack ./src/$STRAVAIG_PROJECT.Analyzer.Package/$STRAVAIG_PROJECT.Analyzer.Package.csproj --configuration Release --output ./out --include-symbols --include-source /p:VersionPrefix="$STRAVAIG_PACKAGE_VERSION" -p:IncludeSymbols=true -p:SymbolPackageFormat=snupkg
 
       - name: Push package to NuGet
         if: ${{ env.STRAVAIG_PUBLISH_TO_NUGET == 'true' }}
