--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -29,9 +29,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Copy Analyser docs
+      - name: List Contributors
         shell: pwsh
-        run: Copy-Item -Path src\Stravaig.Extensions.Core.Analyzer\docs\reference\*.* -Destination docs\analysers -Force
+        run: ./list-contributors.ps1
+
+      - name: Update Docs
+        shell: pwsh
+        run: ./Update-Docs.ps1
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
