(#56) Fix namespace on tests

--- a/src/Stravaig.Extensions.Core.Analyzer.Tests/Stravaig.Extensions.Core.Analyzer.Tests.csproj
+++ b/src/Stravaig.Extensions.Core.Analyzer.Tests/Stravaig.Extensions.Core.Analyzer.Tests.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\Stravaig.Extensions.Core.Analyzer\Stravaig.Extensions.Core.Analyzer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Sec0011\" />
+  </ItemGroup>
+
 </Project>
