Update PR Template

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
     "cSpell.words": [
+        "Analyzer",
         "Dependabot",
-        "Stravaig",
         "nuget",
         "nupkg",
         "pwsh",
-        "snupkg"
+        "snupkg",
+        "Stravaig"
     ]
 }
